added point support, bugfixes

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -496,6 +496,7 @@
     <string name="ShowDigitsOnIcon">Циферки на иконке</string>
     <string name="No">Нет</string>
     <string name="NewMsgTemplate">Шаблон нового сообщения</string>
+    <string name="NewMsgTemplateDescription">Текст по умолчанию при создании нового сообщения</string>
 
 
 </resources>
