--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="JuickMicroblog">Juick</string>
     <string name="BNWMicroblog">BnW</string>
     <string name="PstoMicroblog">psto.net</string>
+    <string name="PointMicroblog">point.im</string>
     <string name="Loading___">Loading...</string>
     <string name="Loading___report">Loading... Complex report may take minute or two...</string>
     <string name="LoadingBackup___">Loading (backup)...</string>
@@ -91,6 +92,8 @@
     <string name="Juick__New_message">Juick: New message</string>
     <string name="BnW__New_message">BnW: New message</string>
     <string name="Psto__New_message">psto: New message</string>
+    <string name="Point__New_message">point: New message</string>
+    <string name="Point__PostNote"> - use *tag1 *tag2 text</string>
     <string name="New_message">New message</string>
     <string name="To__All">To: All</string>
     <string name="Attach">Attach</string>
@@ -179,6 +182,7 @@
 
 
     <string name="navigationSubscriptions">Subscriptions</string>
+    <string name="navigationSubscriptionsWeb">Subscriptions(web)</string>
     <string name="navigationAll">Last messages</string>
     <string name="navigationTop">Top messages</string>
     <string name="navigationPhoto">With photos</string>
@@ -1120,6 +1124,9 @@
     <string name="navigationPSTOSubs">psto.Subs</string>
     <string name="navigationPSTOMy">psto.Blog</string>
     <string name="navigationPSTOPopular">psto.Popular</string>
+    <string name="navigationPointAll">point.All</string>
+    <string name="navigationPointSubs">point.Subs</string>
+    <string name="navigationPointMine">point.Mine</string>
     <string name="JuickAdvancedCrashed">Juick Advanced has crashed</string>
     <string name="NonJabberNotifications">Non-Jabber notifications</string>
     <string name="IsNotEnabledOrServiceIsNotRunning">is not enabled or service is not running</string>
@@ -1255,7 +1262,8 @@
     <string name="ShowDigitsOnIcon">Show digits on icon</string>
     <string name="No">No</string>
     <string name="Censor">Censor</string>
-    <string name="NewMsgTemplate">New Msg Template</string>
+    <string name="NewMsgTemplate">New message template..</string>
+    <string name="NewMsgTemplateDescription">Initial content of new Juick messages</string>
     <string name="ColorsThemes">Colors Themes</string>
     <string name="LoadColorsTheme">Load Colors Theme</string>
     <string name="SaveColorsTheme">Save Colors Theme</string>
