new features from #2748491

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -521,6 +521,7 @@
     <string name="SwipeToClose">Закрывать жестом тред</string>
     <string name="SelectAccountToPost">Выберите куда постить</string>
     <string name="NewPost">Новая запись</string>
+    <string name="SelectSources">Выбрать источники...</string>
 
 
 </resources>
