some changes from tool

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -996,7 +996,7 @@
             ACRA (тулза для отправления сообщений об ошибке), туда уходят много параметров системы, полезных для обнаружения ошибок.
             <br>
             <br>
-             Кроме того, только если вы разрешили анонимную статистику, то на сервер <b><i>ja.ip.rt.ru</b></i> уходит 2-3 раза неделю или реже:
+             Кроме того, только если вы разрешили анонимную статистику, то на сервер <b><i>ja.servebeer.com</b></i> уходит 2-3 раза неделю или реже:
             <ul>
             <li>
             5.1 Уникальный номер инсталляляции, который состоит из MD5 хеша идентификатора вашего девайса
@@ -1017,7 +1017,7 @@
             Отправляемые данные занимают около 1КБ.
             <br>
             <br>
-            6.1 На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
+            6.1 На сервер <b><i>ja.servebeer.com</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
              в случаях, если вы настроили его как "резервный сервер", что было актуальным некоторый период времени когда основной сервер жуйка испытывал сложности.
              Для получения этой информации туда не уходит ваша авторизация, и поэтому запросы на вашу персональную ленту сервер не обрабатывает.
             <br>
@@ -1026,7 +1026,7 @@
              <br>
              <br>
             7.1 <b>НО</b> если вы используете нотификацию о сообщениях (не jabber/xmpp), тогда с целью авторизации на этом сервере
-              туда уходит ваша жуйковская авторизация. Во время логина на ja.ip.rt.ru происходит проверка на возможность
+              туда уходит ваша жуйковская авторизация. Во время логина на ja.servebeer.com происходит проверка на возможность
               залогиниться на juick.com с этими данными, и затем эта информация не хранится.
               Это нужно для того, чтобы сторонний Вася не мог назваться вами и получить сформированные для вас данные
               (ваши подписки, и, в будущем, ваши букмарки или что там еще будет за функциональность). Используется HTTPS.
@@ -1035,12 +1035,12 @@
               <br>
             7.2 <b>А если</b> вы еще и используете XMPP/Jabber, то ваши jabber-пароли хранятся в ОЗУ сервера, с целью восстановления соединения
             с jabber сервером, буде оно упадет. Стандартные предупреждения в таком случае звучат так: если хакеры
-            взломают ja.ip.rt.ru, сделают снимок озу или стырят своп-файл, то они конечно всех поимеют. Хорошая новость
+            взломают ja.servebeer.com, сделают снимок озу или стырят своп-файл, то они конечно всех поимеют. Хорошая новость
                 состоит в том, что сервер работает под управлением красноглазого gentoo, там лишь недырявая java и
                 ssh, устойчивый к brute force.
              <br>
               <br>
-            8.1 <b>Расширенные фичи</b> Juick Advanced также требуют вашей жуйковской авторизации, которая уйдет https://ja.ip.rt.ru,
+            8.1 <b>Расширенные фичи</b> Juick Advanced также требуют вашей жуйковской авторизации, которая уйдет https://ja.servebeer.com,
             о чем вас обязательно предупредят перед использованием. Сюда относятся все персонализированные сервисы, начиная с "неотвеченного",
             а также другие сервисы, нагружающие сервер особой нагрузкой. Какая-нибудь авторизация нужна как для исключения нецелевого использования сервиса, так и
              для того, чтобы вашу персонализацию не использовал кто-то другой (см п. 7.1.) Как и в п. 7.1., механизм жуйковской авторизация
